# Portfolio

./: Netflix Titles - EDA.ipynb  Pandas - Filtering, sorting, and modifying DataFrames.ipynb  Python - Functions.ipynb  Python : Functions.ipynb  Python : Pandas - Filtering, sorting, and modifying DataFrames.ipynb  README.md  Simple bar plot EDA of a Treadmill Dataset  Simple bar plot EDA of a Treadmill Dataset.ipynb  US Gun Violence Exploration.ipynb  conditionals-and-loops.ipynb  conditionals-loops-workbook (1).ipynb  gun_violence_GitHub.py  my-strava.ipynb  netflix-titles-eda-in-python.ipynb  pitchfork-reviews-eda-in-python.ipynb  sql-analysis-of-us-craft-beers-breweries.ipynb  sql-bigquery-querying-of-a-covid-19-dataset.ipynb
Strava/: Dockerfile  Makefile  analysis.py  main.py  my-strava.ipynb  pyproject.toml  tom_strava_activities.csv
Strava/analysis/: analysis.py
Strava/analysis/DAGs/: analysis_dag.py
