[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-strava"
version = "0.0.1"
description = "Strava Analysis"
packages = [{include = "classes"}]
classifiers = ["License :: OSI Approved :: BSD License"]
authors = ["Tom Billington <tm.billington@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
numpy = ">=1.26"
pandas = ">=2.0.3"
seaborn = ">=0.13.2"
matplotlib = ">=3.5.3"
plotly = ">=5.24.1"